apps/base/keycloak/keycloak/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/custom-http-errors: "400,401,403,404,405,407,408,409,410,411,412,413,418,429,500,502,503,504,505"
    nginx.ingress.kubernetes.io/modsecurity-snippet: |
      SecRuleEngine DetectionOnly
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
  name: identity
  namespace: keycloak
spec:
  ingressClassName: nginx-public
  rules:
    - host: identity.christensencloud.us
      http:
        paths:
          - backend:
              service:
                name: keycloak-service
                port:
                  number: 8443
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - identity.christensencloud.us
      secretName: identity-christensencloud.us-tls
